--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro">Intro</a></li>
-							<li><a href="#one">What I Do</a></li>
-							<li><a href="#two">Who I Am</a></li>
-							<li><a href="#work">My Work</a></li>
-							<li><a href="#contact">Contact</a></li>
+							<li><a href="#four">Expert Advice</a></li>
+							<li><a href="#work">User Feedback</a></li>
+							<li><a href="#usage">Usage</a></li>
+							<li><a href="#contact">Order</a></li>
 						</ul>
 					</nav>
 
@@ -116,7 +116,7 @@
 			<section id="work" class="main style3 primary">
 				<div class="content container">
 					<header>
-						<h2>My Work</h2>
+						<h2>User Feedback</h2>
 						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
 						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
 						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
@@ -140,12 +140,33 @@
 
 				</div>
 			</section>
+			usage
+		<section id="usage" class="main style3 primary">
+				<div class="content container">
+					<header>
+						<h2>Usage</h2>
+						
+					</header>
+
+					<!-- Lightbox Gallery  -->
+						<div class="container 75% gallery">
+							<div class="row 0% images">
+								<div class="6u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit from-left"><img src="images/thumbs/u01.jpg" title="TITLE1" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit from-right"><img src="images/thumbs/u02.jpg" title="TITLE2" alt="" /></a></div>
+							</div>
+							<div class="row 0% images">
+								<div class="6u 12u(mobile)"><a href="images/fulls/03.jpg" class="image fit from-left"><img src="images/thumbs/u03.jpg" title="TITLE3" alt="" /></a></div>		
+							</div>
+						</div>
+
+				</div>
+			</section>
 
 		<!-- Contact -->
 			<section id="contact" class="main style3 secondary">
 				<div class="content container">
 					<header>
-						<h2>Order me.</h2>
+						<h2>Order</h2>
 						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
 					</header>
 					<div class="box container 75%">
