--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
 					<!-- Lightbox Gallery  -->
 						<div class="container 75% gallery">
 							<div class="row 0% images">
-								<div class="6u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit from-left"><img src="images/thumbs/u01.jpg" title="TITLE1" alt="" /></a></div>
-								<div class="6u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit from-right"><img src="images/thumbs/u02.jpg" title="TITLE2" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/u01.jpg" class="image fit from-left"><img src="images/thumbs/u01.jpg" title="TITLE1" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/u02.jpg" class="image fit from-right"><img src="images/thumbs/u02.jpg" title="TITLE2" alt="" /></a></div>
 							</div>
 							<div class="row 0% images">
-								<div class="6u 12u(mobile)"><a href="images/fulls/03.jpg" class="image fit from-left"><img src="images/thumbs/u03.jpg" title="TITLE3" alt="" /></a></div>		
+								<div class="6u 12u(mobile)"><a href="images/fulls/u03.jpg" class="image fit from-left"><img src="images/thumbs/u03.jpg" title="TITLE3" alt="" /></a></div>		
 							</div>
 						</div>
 
