--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 				<!-- Logo -->
 				<!-- 	<h1 id="logo">UV Index Meter</h1>-->
-				<h1 id="logo"><img src="images/logo.jpg" border="0"></h1>
+				<h1 id="logo"><img src="images/logo.png" border="0"></h1>
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
