--- a/index.html
+++ b/index.html
@@ -110,6 +110,30 @@
 					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
 					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
 				</div>-->
+				<a href="#six" class="button style2 down anchored">Next</a>
+			</section>
+		<!-- Six -->
+			<section id="six" class="main style2 left dark fullscreen">
+			<!--	<div class="content box style2">
+					<header>
+						<h2>Who I Am</h2>
+					</header>
+					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
+					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
+					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+				</div>-->
+				<a href="#seven" class="button style2 down anchored">Next</a>
+			</section>
+		<!-- Seven -->
+			<section id="seven" class="main style2 left dark fullscreen">
+			<!--	<div class="content box style2">
+					<header>
+						<h2>Who I Am</h2>
+					</header>
+					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
+					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
+					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+				</div>-->
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
 		<!-- Work -->
@@ -156,6 +180,10 @@
 							</div>
 							<div class="row 0% images">
 								<div class="6u 12u(mobile)"><a href="images/fulls/u03.jpg" class="image fit from-left"><img src="images/thumbs/u03.jpg" title="TITLE3" alt="" /></a></div>		
+								<div class="6u 12u(mobile)"><a href="images/fulls/u04.jpg" class="image fit from-right"><img src="images/thumbs/u04.jpg" title="TITLE4" alt="" /></a></div>
+							</div>
+							<div class="row 0% images">
+								<div class="6u 12u(mobile)"><a href="images/fulls/u05.jpg" class="image fit from-left"><img src="images/thumbs/u05.jpg" title="TITLE5" alt="" /></a></div>		
 							</div>
 						</div>
 
