--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>UV Index Meter</title>
+		<title>Anti-Sunburn</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -21,7 +21,7 @@
 
 				<!-- Logo -->
 				<!-- 	<h1 id="logo">UV Index Meter</h1>-->
-				<h1 id="logo"><img src="images/logo.png" border="0"></h1>
+				<h1 id="logo"><img src="images/logo.png" border="0"> UV Index Meter</h1>
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
@@ -39,7 +39,7 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content container 75%">
 					<header>
-						<h2>UV Index Meter</h2>
+						<h2>Anti-Sunburn</h2>
 					</header>
 					<p>A product by <strong>STRIDER TECH</strong> <a href="http://www.strider-tech.com">See more</a></p>
 					<footer>
